Kubernetes_Basics/13_hpa/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld
  name: helloworld
  namespace: demo
spec:
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: k3d-registry.127.0.0.1.nip.io:5000/helloworld:v0.1.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 100M
              cpu: 2
            requests:
              memory: 10M 
              cpu: 100m
