Kubernetes_Basics/13_hpa/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
    - host: helloworld.demo.local.hr.jambit.space 
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: helloworld 
                port:
                  number: 80
            path: /
  tls:
    - hosts:
      - helloworld.demo.local.hr.jambit.space 
      secretName: tls-secret
